2007-08-12  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/ejabberd_odbc.erl: UTF-8 support for MySQL5 (EJAB-318).

2007-08-09  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Minor update (thanks to Sergei Golovan)

2007-08-08  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_offline.erl: Only count messages if a quota has been
	actually set (EJAB-314).
	* src/p1_mnesia.erl: Minor coding style change.

2007-08-07  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_offline.erl: Started implementation of mod_offline
	quota. For now, it require change in code. Will be turn into a
	config file parameter soon. (EJAB-314).
	* src/p1_mnesia.erl: Added memory efficient record count in
	Mnesia.

2007-08-03  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_announce.erl: Added support to all the announce features
	described in documentation. Access to all announce features
	through command line, adhoc commands and disco (Thanks to
	Badlop) (EJAB-18).
	* src/gen_mod.erl: Likewise.
	* doc/guide.tex: Likewise.

2007-08-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added default_room_options option
	(thanks to Etan Reisner and Badlop)
	* src/mod_muc/mod_muc_room.erl: Likewise
	* doc/guide.tex: Updated

2007-08-01  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Front page table formatting that render correctly
	in HTML and update mentionning CEAN as a way to install
	ejabberd (Thanks to Badlop) (EJAB-272).

	* src/ejabberd_s2s_out.erl: Avoid bouncing messages twice if
	terminate happens during open_socket.

	* src/ejabberd_s2s_out.erl: On terminate, bounce internal process
	queue and Erlang message queue.

	* src/mod_private.erl: Reduce memory consumption on user private
	storage removal (EJAB-299).

2007-07-31  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Making use of CDATA escaping optional through with
	a compile time option (EJAB-298).